# qa-copilot-mcp

./: GUÍA_PRESENTACIÓN.md  PRESENTACIÓN.html  README.md  pyproject.toml  requirements.txt
docs/: arquitectura.md
src/: __init__.py  main.py
src/application/: __init__.py  dtos.py
src/application/use_cases/: __init__.py  analizar_riesgos.py  estimar_esfuerzo.py  generar_casos_prueba.py  generar_criterios.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  jira_ticket.py
src/domain/ports/: __init__.py  acceptance_criteria_port.py  effort_estimation_port.py  risk_analysis_port.py  testing_analysis_port.py
src/domain/services/: __init__.py
src/infrastructure/: __init__.py
src/infrastructure/mcp/: __init__.py  adapters.py  bootstrap.py  client.py  real_client.py  real_server.py  server.py
src/infrastructure/mcp/tools/: __init__.py  acceptance_criteria_tool.py  common.py  effort_estimation_tool.py  risk_analysis_tool.py  testing_cases_tool.py
src/infrastructure/persistence/: __init__.py
src/infrastructure/web/: __init__.py  dependencies.py
src/infrastructure/web/controllers/: __init__.py  qa_controller.py  schemas.py  view_controller.py
src/infrastructure/web/static/: app.js  styles.css
src/infrastructure/web/templates/: index.html
tests/: test_api.py  test_mcp_server.py  test_real_mcp_client.py
work/: start_uvicorn.py
