[project]
name = "qa-copilot-mcp"
version = "0.1.0"
description = "Proyecto educativo: MCP con Arquitectura Hexagonal para generar artefactos QA desde tickets Jira."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "mcp>=1.16.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
